--- a/.env
+++ b/.env
@@ -36,6 +36,7 @@ ENV_MIRTH_POSTGRES_DB_HOST=mirth-db.dh.local
 ENV_MIRTH_POSTGRES_DB=mirthdb
 ENV_MIRTH_POSTGRES_USER=mirthconnect
 ENV_MIRTH_POSTGRES_PASSWORD=foobar
+ENV_MIRTH_KEYSTORE_STOREPASS=foobar
 
 # For containers that use docker images
 ENV_MYSQL_VERSION=5.6
