Use the dh.local domain suffix for rabbitmq host [DHS-2]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
       DATAVERSE_ENDPOINT: https://demo.dataverse.nl/
       DATAVERSE_TREE_ROOT_ID: maastricht
       DATAVERSE_TREE_TITLE_FILTER: "TEST_Datahub-iRods_MUMC_Dataverse,TEST_Datahub-iRods_Dataverse,DataHub,Maastricht UMC+"
-      RABBITMQ_HOST: rabbitmq
+      RABBITMQ_HOST: rabbitmq.dh.local
       RABBITMQ_USER: user
       RABBITMQ_PASS: password
       RABBITMQ_PORT: 5672
