Update version of filebeat and update filebeat.yml [DHS-260 DHS-284]

--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -70,6 +70,7 @@ RUN wget https://artifacts.elastic.co/downloads/beats/filebeat/filebeat-${ENV_FI
  && dpkg -i /tmp/filebeat.deb
 
 ADD filebeat.yml /etc/filebeat/filebeat.yml
+RUN chmod go-w /etc/filebeat/filebeat.yml 
 
 # Finalize
 
