--- a/icat/filebeat.yml
+++ b/icat/filebeat.yml
@@ -1,23 +1,17 @@
-filebeat.prospectors:
+filebeat.inputs:
+  - type: log
+    enabled: true
+    paths:
+      - /var/lib/irods/log/*Log*
 
-# Each - is a prospector. Most options can be set at the prospector level, so
-# you can use different prospectors for various configurations.
-# Below are the prospector specific configurations.
+      #Multiline
+      multiline.pattern: '^[A-Z][a-z]{2}\s+\d'
+      multiline.negate: true
+      multiline.match: after
+      multiline.max_linex: 10000
 
-- input_type: log
-
-  # Paths that should be crawled and fetched. Glob based paths.
-  paths:
-    - /var/lib/irods/log/*Log*
-
-  #Multiline
-  multiline.pattern: '^[A-Z][a-z]{2}\s+\d'
-  multiline.negate: true
-  multiline.match: after
-  multiline.max_linex: 10000
-
-  #Tags
-  tags: ["ICAT"]
+      #Tags
+      tags: ["ICAT"]
 
 output.logstash:
-    hosts: ["elk.dh.local:5044"]
+   hosts: ["elk.dh.local:5044"]
