--- a/ires/filebeat.yml
+++ b/ires/filebeat.yml
@@ -1,14 +1,8 @@
-filebeat.prospectors:
-
-# Each - is a prospector. Most options can be set at the prospector level, so
-# you can use different prospectors for various configurations.
-# Below are the prospector specific configurations.
-
-- input_type: log
-
-  # Paths that should be crawled and fetched. Glob based paths.
-  paths:
-    - /var/lib/irods/log/*Log*
+filebeat.inputs:
+  - type: log
+    enabled: true
+    paths:
+      - /var/lib/irods/log/*Log*
 
   #Multiline
   multiline.pattern: '^[A-Z][a-z]{2}\s+\d'
@@ -20,4 +14,4 @@ filebeat.prospectors:
   tags: ["IRES_UM01", "IRES"]
 
 output.logstash:
-    hosts: ["elk.dh.local:5044"]
+  hosts: ["elk.dh.local:5044"]
