disable metrics for filebeat [DHS-260 DHS-284]

--- a/icat/filebeat.yml
+++ b/icat/filebeat.yml
@@ -13,5 +13,8 @@ filebeat.inputs:
     #Tags
     tags: ["ICAT"]
 
+# Disable filebeat monitoring
+logging.metrics.enabled: false
+
 output.logstash:
    hosts: ["elk.dh.local:5044"]
