Initial work to configure iRODS to use SSL, using a single certificate. Only client adapted is the ./i. DHS-245 DHS-262

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -143,6 +143,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
+      - irods_ssl:/opt/irods_ssl
   ires:
     build:
       context: ires/
@@ -550,3 +551,5 @@ services:
 networks:
   common_default:
     external: true
+volumes:
+  irods_ssl:
