--- a/irods-icommands/Dockerfile
+++ b/irods-icommands/Dockerfile
@@ -8,6 +8,7 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     DEBIAN_FRONTEND=noninteractive apt-get install -y \
     apt-transport-https \
     wget \
+    nano \
     libxml2
 
 # install iRODS icommands
