--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -572,6 +572,11 @@ services:
       LDAP_HOST: ldap://ldap.dh.local
       DEFAULT_USER_PASSWORD: foobar
       LOGSTASH_TAGS: SRAMSYNC
+      SYNC_USERS: "True"
+      DELETE_USERS: "True"
+      DELETE_USERS_LIMIT: 3
+      SYNC_GROUPS: "True"
+      DELETE_GROUPS: "True"
     command: sram-sync.py --commit --scheduled
     networks:
       default:
