--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -570,8 +570,9 @@ services:
       LDAP_USER: cn=admin,dc=datahubmaastricht,dc=nl
       LDAP_PASS: admin
       LDAP_HOST: ldap://ldap.dh.local
-      LDAP_USERS_BASE_DN: ou=users,DC=datahubmaastricht,DC=nl
-      LDAP_GROUPS_BASE_DN: ou=groups,DC=datahubmaastricht,DC=nl
+      LDAP_USERS_BASE_DN: ou=People,dc=flat,dc=datahubmaastricht,dc=nl
+      LDAP_GROUPS_BASE_DN: ou=Groups,dc=flat,dc=datahubmaastricht,dc=nl
+      LDAP_COS_BASE_DN:  dc=ordered,dc=datahubmaastricht,dc=nl
       DEFAULT_USER_PASSWORD: foobar
       LOGSTASH_TAGS: SRAMSYNC
       SYNC_USERS: "True"
