Updated the depends_on for some containers [DHS-626, DHS-72]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,11 @@ services:
         - ENV_HTTP_PROXY
     depends_on:
       - irods
+      - ires
       - db
       - crossref-lookup
       - keycloak
+      - sram-sync
     hostname: pacman
     volumes:
       - /etc/localtime:/etc/localtime:ro
@@ -559,6 +561,9 @@ services:
           - open-access-worker.dh.local
   sram-sync:
     build: sram-sync/
+    depends_on:
+      - irods
+      - ldap
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./sram-sync:/opt/app
