Add new env variable AUTHORIZED_AVU_CHANGE [DHS-639, DHS-653]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,6 +65,7 @@ services:
       RABBITMQ_USER: user
       RABBITMQ_PASS: password
       RABBITMQ_PORT: 5672
+      AUTHORIZED_AVU_CHANGE: "enableArchive,enableOpenAccessExport"
     networks:
       default:
         aliases:
