Mount keycloak/users.json in iCAT container [DHS-757, DHS-820]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -156,6 +156,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
+      - ./keycloak/users.json:/tmp/users.json
 
   ires:
     build:
