--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -28,6 +28,8 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     lsof \
     fortune-mod \
     nano \
+    # packages required to parse keycloak/user.json
+    jq \
     # packages required for building ruleset and microservices {{
     libssl-dev \
     libcurl4-openssl-dev \
