--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -156,7 +156,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
       - ./externals/irods-ruleset:/rules
       - ./externals/irods-microservices:/microservices
-      - ./keycloak/users.json:/tmp/users.json
+      - ./keycloak/users.json:/opt/irods/users.json
 
   ires:
     build:
