Changed the docker-compose file and added an environment file for the use of a docker registry [DHS-838, DHS-853]

--- a/.env
+++ b/.env
@@ -2,6 +2,11 @@
 ### Use this file to declare default values for docker-compose variables ###
 ### See https://docs.docker.com/compose/env-file/                        ###
 ############################################################################
+# Docker registry
+ENV_REGISTRY_HOST=registry.dh.unimaas.nl:5000
+ENV_TAG=latest
+ENV_BRANCH=master
+
 # iRODS and iRES
 ENV_IRODS_VERSION=4.2.6
 ENV_IRODS_MSI_CURL_VERSION=2.6.0
