--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
         - ENV_SIMPLESAML_HASH
         - ENV_FILEBEAT_VERSION
         - ENV_HTTP_PROXY
+    image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/pacman:${ENV_TAG}
     depends_on:
       - irods
       - ires
@@ -130,6 +131,7 @@ services:
         - ENV_IRODS_EXT_CLANG_VERSION
         - ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
         - ENV_FILEBEAT_VERSION
+    image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/irods:${ENV_TAG}
     depends_on:
       - irods-db
       - mirthconnect
@@ -168,6 +170,7 @@ services:
         - ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
         - ENV_DOCKERIZE_VERSION
         - ENV_FILEBEAT_VERSION
+    image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/ires:${ENV_TAG}
     depends_on:
       - irods
     hostname: ires
@@ -204,6 +207,7 @@ services:
         - ENV_IRODS_EXT_CLANG_RUNTIME_VERSION
         - ENV_DOCKERIZE_VERSION
         - ENV_FILEBEAT_VERSION
+    image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/ires-centos:${ENV_TAG}
     depends_on:
       - irods
     hostname: ires-centos
@@ -241,6 +245,7 @@ services:
         - ENV_IRODS_RESC_PLUGIN_S3_VERSION
         - ENV_DOCKERIZE_VERSION
         - ENV_FILEBEAT_VERSION
+    image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/ires-s3:${ENV_TAG}
     depends_on:
       - irods
       - ires  # Because of ingest resource
@@ -281,6 +286,7 @@ services:
         - ENV_IRODS_RESC_PLUGIN_S3_VERSION
         - ENV_DOCKERIZE_VERSION
         - ENV_FILEBEAT_VERSION
+    image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/ires-s3:${ENV_TAG}
     depends_on:
       - irods
       - ires  # Because of ingest resource
@@ -348,6 +354,7 @@ services:
         - ENV_IRODS_REST_VERSION
         - ENV_CLOUDBROWSER_VERSION
         - ENV_FILEBEAT_VERSION
+    image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/irods-frontend:${ENV_TAG}
     hostname: irods-frontend
     environment:
       VIRTUAL_HOST: frontend.${RIT_ENV}.rit.unimaas.nl
@@ -369,6 +376,7 @@ services:
       args:
         - ENV_DAVRODS_IRODS_VERSION
         - ENV_DAVRODS_VERSION
+    image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/davrods:${ENV_TAG}
     depends_on:
       - irods
     environment:
@@ -385,6 +393,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
   metalnx:
     build: externals/rit-metalnx-web/
+    image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/metalnx:${ENV_TAG}
     depends_on:
       - irods
     hostname: metalnx
@@ -412,6 +421,7 @@ services:
       args:
         - ENV_MIRTH_CONNECT_VERSION
         - ENV_FILEBEAT_VERSION
+    image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/mirthconnect:${ENV_TAG}
     depends_on:
       - mirth-db
       - epicpid
@@ -466,6 +476,7 @@ services:
           - mirth-db.dh.local
   crossref-lookup:
     build: externals/crossref-lookup
+    image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/crossref-lookup:${ENV_TAG}
     environment:
       VIRTUAL_HOST: crossref-lookup.${RIT_ENV}.rit.unimaas.nl
       LOGSTASH_TAGS: CROSSREF_LOOKUP
@@ -481,6 +492,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
   epicpid:
     build: externals/epicpid-microservice/docker
+    image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/epicpid:${ENV_TAG}
     environment:
       VIRTUAL_HOST: epicpid.${RIT_ENV}.rit.unimaas.nl
       LOGSTASH_TAGS: EPIC_PID
@@ -535,6 +547,7 @@ services:
           - minio2.dh.local
   open-access-worker:
     build: externals/irods-open-access-repo/docker
+    image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/open-access-worker:${ENV_TAG}
 #    depends_on:
 #      - irods
     env_file:
@@ -564,6 +577,7 @@ services:
           - open-access-worker.dh.local
   sram-sync:
     build: externals/sram-sync/
+    image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/sram-sync:${ENV_TAG}
     depends_on:
       - irods
       - ldap
