Removed the port from the Docker Registry URL [DHS-838]

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 ### See https://docs.docker.com/compose/env-file/                        ###
 ############################################################################
 # Docker registry
-ENV_REGISTRY_HOST=registry.dh.unimaas.nl:5000
+ENV_REGISTRY_HOST=registry.dh.unimaas.nl
 ENV_TAG=latest
 ENV_BRANCH=master
 
