Added logspout: ignore and removed logstash tag from davrods [DHS-1058, DHS-1094]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -387,7 +387,7 @@ services:
       - irods
     environment:
       VIRTUAL_HOST: webdav.${RIT_ENV}.rit.unimaas.nl
-      LOGSTASH_TAGS: DAVRODS
+      LOGSPOUT: ignore
     networks:
       default:
         aliases:
