--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -382,6 +382,7 @@ services:
       args:
         - ENV_DAVRODS_IRODS_VERSION
         - ENV_DAVRODS_VERSION
+        - ENV_FILEBEAT_VERSION
     image:  ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/davrods:${ENV_TAG}
     depends_on:
       - irods
