--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,23 @@
 version: '2'
 services:
+  mdr:
+    build:
+      context: externals/dh-mdr
+      dockerfile: Dockerfile
+    image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/mdr:${ENV_TAG}
+    # Use this command to get the django logs
+    #    command: python manage.py runserver 0.0.0.0:8000
+    #    command: gunicorn pacman.wsgi:application --bind 0.0.0.0:5005
+    environment:
+      VIRTUAL_HOST: mdr.${RIT_ENV}.dh.unimaas.nl
+      VIRTUAL_PORT: 8000
+    networks:
+      default:
+        aliases:
+          - mdr.dh.local
+      common_default:
+        aliases:
+          - mdr.dh.local
   pacman:
     build:
       context: externals/dh-rdm-service-docker/dev
