--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,13 @@ services:
       VIRTUAL_PORT: 8000
       LOGSPOUT: ignore
       RIT_ENV: ${RIT_ENV}
+      # TODO: use metadata URL for both keycloak and SURFconext/SRAM
+      SAML_IDP_METADATA_URL: https://placeholder.example.org
+      SAML_SP_ENTITY_ID: http://mdr.${RIT_ENV}.dh.unimaas.nl/saml2_auth/acs/
+      SAML_DJANGO_USERNAME_ATTR: username
+      SAML_DJANGO_FIRSTNAME_ATTR: email
+      SAML_DJANGO_LASTNAME_ATTR: email
+      SAML_DJANGO_MAIL_ATTR: email
       IRODS_HOST: irods.dh.local
       IRODS_USER: rods
       IRODS_PASS: irods
