--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,10 @@ services:
       dockerfile: Dockerfile
       args:
         - ENV_FILEBEAT_VERSION
+        - RIT_ENV
+        - ENV_RULE_WRAPPER_VERSION
+        - SAML_DJANGO_BASE_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl
+        - SAML_IDP_METADATA_FILE_LOCATION=/opt/core/keycloak_descriptor.xml     # Point to the local file or URL (depends on your choice above)
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/mdr:${ENV_TAG}
     depends_on:
       - keycloak
@@ -15,8 +19,9 @@ services:
       LOGSPOUT: ignore
       RIT_ENV: ${RIT_ENV}
       SAML_IDP_METADATA_SOURCETYPE: METADATA_LOCAL_FILE_PATH            # Allowed values: 'METADATA_LOCAL_FILE_PATH' or 'METADATA_AUTO_CONF_URL'
-      SAML_IDP_METADATA_LOCATION: /opt/core/keycloak_descriptor.xml     # Point to the local file or URL (depends on your choice above)
-      SAML_SP_ENTITY_ID: http://mdr.${RIT_ENV}.dh.unimaas.nl/saml2_auth/acs/
+      SAML_IDP_METADATA_FILE_LOCATION: /opt/core/keycloak_descriptor.xml     # Point to the local file or URL (depends on your choice above)
+      SAML_DJANGO_BASE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl
+      SAML_SP_ENTITY_ID: http://mdr.${RIT_ENV}.dh.unimaas.nl/saml2/metadata/
       SAML_DJANGO_USERNAME_ATTR: username
       SAML_DJANGO_FIRSTNAME_ATTR: email
       SAML_DJANGO_LASTNAME_ATTR: email
