--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
         - ENV_RULE_WRAPPER_VERSION
         - SAML_DJANGO_BASE_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl
         - SAML_IDP_METADATA_FILE_LOCATION=/opt/core/keycloak_descriptor.xml     # Point to the local file or URL (depends on your choice above)
+        - SAML_DJANGO_WANT_ASSERTIONS_SIGNED=True
+        - SAML_DJANGO_WANT_RESPONSE_SIGNED=False
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/mdr:${ENV_TAG}
     depends_on:
       - keycloak
