--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,8 @@ services:
       DH_MAILER_USERNAME: user
       DH_MAILER_PASSWORD: password
       DISQOVER_URL: https://disqover.datahubmaastricht.nl/
+      CROSSREF_LOOKUP_HOST: crossref-lookup.dh.local
+      OLS_URL: https://ols.acc.rit.unimaas.nl
     networks:
       default:
         aliases:
