--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - ./externals/dh-mdr/nginx.conf:/etc/nginx/conf.d/default.conf
     environment:
       VIRTUAL_HOST: mdr.${RIT_ENV}.dh.unimaas.nl
+    restart: "on-failure"
     networks:
       default:
         aliases:
