Removed mdr-web container in favor of jwilder container [DHS-1318]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,5 @@
 version: '2'
 services:
-  mdr-web:
-    image: nginx:latest
-    volumes:
-      - static_content:/static
-      - ./externals/dh-mdr/nginx.conf:/etc/nginx/conf.d/default.conf
-    environment:
-      VIRTUAL_HOST: mdr.${RIT_ENV}.dh.unimaas.nl
-    networks:
-      default:
-        aliases:
-          - mdr-web.dh.local
-      common_default:
-        aliases:
-          - mdr-web.dh.local
   mdr:
     build:
       context: externals/dh-mdr
@@ -28,8 +14,9 @@ services:
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/mdr:${ENV_TAG}
     depends_on:
       - keycloak
-      - mdr-web
     environment:
+      VIRTUAL_HOST: mdr.${RIT_ENV}.dh.unimaas.nl
+      VIRTUAL_PORT: 8000
       LOGSPOUT: ignore
       DJANGO_ENABLE_DEBUG: "True"   # dev/acc: "True", prod: "False"
       SAML_IDP_METADATA_URL: http://keycloak.${RIT_ENV}.dh.unimaas.nl:8080/auth/realms/drupal/protocol/saml/descriptor
