Ubuntu 18 for iRES-S3 containers [DHS-1176,DHS-1177]

--- a/ires-s3/Dockerfile
+++ b/ires-s3/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 
 # Load build arguments from environment
 ARG ENV_IRODS_VERSION
@@ -91,6 +91,11 @@ ADD ./bootstrap_irods.sh /opt/irods/bootstrap_irods.sh
 ADD ./prepend_ruleset.py /opt/irods/prepend_ruleset.py
 ADD ./add_rule_engine.py /opt/irods/add_rule_engine.py
 ADD ./add_env_var.py /opt/irods/add_env_var.py
+
+# Temporary fix needed with iRODS 4.2.6, after upgrading this shouldnt be necessary anymore
+# https://github.com/agracio/electron-edge-js/issues/16
+RUN ln -s /usr/include/locale.h /usr/include/xlocale.h
+
 RUN chmod a+x /opt/irods/*
 
 EXPOSE 1248 1247 8000
