--- a/ires-s3/Dockerfile
+++ b/ires-s3/Dockerfile
@@ -45,7 +45,8 @@ RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1nl.\2/" /etc/a
     make \
     cmake \
     git \
-    python-pip
+    python-pip \
+    python-virtualenv
     # }} end
 
 ENV IRODS_VERSION ${ENV_IRODS_VERSION}
