--- a/.env
+++ b/.env
@@ -23,7 +23,7 @@ ENV_IRODS_REST_VERSION=4.1.10.0-RC1
 ENV_DAVRODS_IRODS_VERSION=4.2.6
 ENV_DAVRODS_VERSION=4.2.6_1.4.2
 
-ENV_RULE_WRAPPER_VERSION=v1.1.1
+ENV_RULE_WRAPPER_VERSION=develop
 
 # Pacman
 # NOTE: Transfer any changes made here also to the .env file of dh-rdm-service-docker
