Create SURFsara Archive vault and move DMFS/* to iCAT [DHS-1148]

--- a/icat/Dockerfile
+++ b/icat/Dockerfile
@@ -83,6 +83,10 @@ ADD ./prepend_ruleset.py /opt/irods/prepend_ruleset.py
 ADD ./add_rule_engine.py /opt/irods/add_rule_engine.py
 ADD ./add_env_var.py /opt/irods/add_env_var.py
 
+# Add DMFS fakers (SURFsara tape)
+ADD ./DMFS/* /var/lib/irods/msiExecCmd_bin/
+RUN chmod 755 /var/lib/irods/msiExecCmd_bin/dm*
+
 # Temporary fix for the CAT_STATEMENT_TABLE_FULL error in iRODS 4.2.6
 # https://github.com/irods/irods/issues/4438
 # https://github.com/irods/irods_rule_engine_plugin_python/commit/9f957078569c75a4f539c297138a0bb0d3e1824c 
