--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,9 @@ services:
       OLS_URL: https://ols.acc.rit.unimaas.nl
       WEBDAV_URL: webdav.${RIT_ENV}.rit.unimaas.nl
       TERMS_OF_SERVICE_TIMESTAMP: 1618476699 #  date '+%s' on	Thu Apr 15 2021 08:51:39 GMT+0000
+      DATAVERSE_ENDPOINT: https://demo.dataverse.nl/
+      DATAVERSE_TREE_ROOT_ID: maastricht
+      DATAVERSE_TREE_TITLE_FILTER: "DataHub;Maastricht UMC+;Faculty of Health, Medicine and Life Sciences;MERLN"
       RABBITMQ_HOST: rabbitmq.dh.local
       RABBITMQ_USER: user
       RABBITMQ_PASS: password
