--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,6 @@ services:
       args:
         - ENV_FILEBEAT_VERSION
         - ENV_RULE_WRAPPER_VERSION
-        - SAML_DJANGO_BASE_URL=http://mdr.${RIT_ENV}.dh.unimaas.nl
-        - SAML_DJANGO_WANT_ASSERTIONS_SIGNED=True
-        - SAML_DJANGO_WANT_RESPONSE_SIGNED=False
-        - DJANGO_ENABLE_DEBUG=True
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/mdr:${ENV_TAG}
     depends_on:
       - keycloak
@@ -18,7 +14,7 @@ services:
       VIRTUAL_HOST: mdr.${RIT_ENV}.dh.unimaas.nl
       VIRTUAL_PORT: 8000
       LOGSPOUT: ignore
-      DJANGO_ENABLE_DEBUG: "True"   # dev/acc: "True", prod: "False"
+      DJANGO_DEV_MODE: "True"   # dev: "True", acc/prod: "False"
       SAML_IDP_METADATA_URL: http://keycloak.${RIT_ENV}.dh.unimaas.nl:8080/auth/realms/drupal/protocol/saml/descriptor
       SAML_DJANGO_BASE_URL: http://mdr.${RIT_ENV}.dh.unimaas.nl
       SAML_DJANGO_WANT_ASSERTIONS_SIGNED: "True"                               # SURFconext: True, SRAM: False
