--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,9 @@ services:
         - DJANGO_ENABLE_DEBUG=True
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/mdr:${ENV_TAG}
     depends_on:
+      - irods
+      - ires
+      - crossref-lookup
       - keycloak
     environment:
       VIRTUAL_HOST: mdr.${RIT_ENV}.dh.unimaas.nl
