dh-faker now does nothing when the dh-faker up command is run[DHS-1679]

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,7 @@ services:
     volumes:
       - ./externals/dh-faker:/opt/
       - ./staging-data:/mnt/ingest
+    command: "python -c pass"
     environment:
       IRODS_HOST: irods.dh.local
       IRODS_USER: rods
