--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -469,7 +469,7 @@ services:
     build: externals/crossref-lookup
     image: ${ENV_REGISTRY_HOST}/docker-dev/${ENV_BRANCH}/crossref-lookup:${ENV_TAG}
     environment:
-      VIRTUAL_HOST: crossref-lookup.${RIT_ENV}.rit.unimaas.nl
+      VIRTUAL_HOST: crossref-lookup.${RIT_ENV}.dh.unimaas.nl
       LOGSTASH_TAGS: CROSSREF_LOOKUP
     networks:
       default:
